# hs_finder

./: CMakeLists.txt  Changelog.txt  LICENSE  LICENSE.txt  README.md
CMake/: FindHyperscan.cmake
doc/: Doxyfile
examples/: example1.c
include/: hs_finder.h
lib/: hs_finder.c  hyperscan_expr_list.c  hyperscan_expr_list.h  search_data_buffer.c  search_data_buffer.h
src/: hs_finder_count.c  hs_finder_replace.c
